Ensure tests can pass